# embedded-recruitment-task-0.0.1

./: Cargo.toml  SOLUTION.md
src/: server.rs
tests/: client_test.rs
