[package]
name = "embedded-recruitment-task"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
log = "0.4.22"
prost = "0.13.4"
prost-types = "0.13.4"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
prost-build = "0.13.4"

[dev-dependencies]
pretty_assertions = "1.4.1"
